samples/_failures_safe/1761076148_00f45b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd219a9c.c: In function ‘main’:
./samples/SAFE/__tmp_dd219a9c.c:139: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_dd219a9c.c:138:5: error: expected declaration or statement at end of input
  138 |     for
      |     ^~~
